--- a/MusicTagTool/TotalTagger.csproj
+++ b/MusicTagTool/TotalTagger.csproj
@@ -44,8 +44,8 @@
     <Reference Include="Bass.Net">
       <HintPath>bin\Release\Bass.Net.dll</HintPath>
     </Reference>
-    <Reference Include="DiscogsClient, Version=2.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DiscogsClient.2.3.0\lib\net461\DiscogsClient.dll</HintPath>
+    <Reference Include="DiscogsClient, Version=2.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DiscogsClient.2.5.0\lib\net461\DiscogsClient.dll</HintPath>
     </Reference>
     <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>True</EmbedInteropTypes>
@@ -135,9 +135,8 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="taglib-sharp, Version=2.1.0.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\taglib-sharp.dll</HintPath>
+    <Reference Include="taglib-sharp, Version=2.2.0.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
+      <HintPath>..\packages\TagLibSharp.2.2.0-beta\lib\net462\taglib-sharp.dll</HintPath>
     </Reference>
     <Reference Include="Unosquare.Labs.EmbedIO, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\EmbedIO.2.0.0\lib\net47\Unosquare.Labs.EmbedIO.dll</HintPath>
