--- a/MusicTagTool/packages.config
+++ b/MusicTagTool/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AWSSDK.Core" version="3.3.29.16" targetFramework="net472" />
-  <package id="DiscogsClient" version="2.3.0" targetFramework="net472" />
+  <package id="DiscogsClient" version="2.5.0" targetFramework="net472" />
   <package id="EmbedIO" version="2.0.0" targetFramework="net472" />
   <package id="ManagedBass" version="2.0.4" targetFramework="net472" />
   <package id="ManagedBass.Fx" version="2.0.1" targetFramework="net472" />
@@ -25,5 +25,6 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.6.0-preview.18571.3" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="TagLibSharp" version="2.2.0-beta" targetFramework="net472" />
   <package id="Unosquare.Swan.Lite" version="0.36.1" targetFramework="net472" />
 </packages>
