--- a/MusicTagTool/TotalTagger.csproj
+++ b/MusicTagTool/TotalTagger.csproj
@@ -174,6 +174,7 @@
       <DependentUpon>FindDuplicatesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MusicAPIs\Galiboo.cs" />
+    <Compile Include="RestService.cs" />
     <Compile Include="SearchServiceForAlbum.cs" />
     <Compile Include="SearchServiceForArtwork.cs" />
     <Compile Include="SearchServiceForMetadata.cs" />
